--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=Question5
 server.port=9090
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.main.allow-bean-definition-overriding=true
+
 
 # Postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/question5
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-
-
